# python-logstash-async

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  README.rst  example1.py  example2.py  example3.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  about.rst  conf.py  config.rst  config_logstash.rst  index.rst  installation.rst  persistence.rst  usage.rst
logstash/: handler_tcp.py
logstash_async/: __init__.py  cache.py  constants.py  database.py  formatter.py  handler.py  memory_cache.py  transport.py  utils.py  worker.py
test/: database_test.py  memory_cahe_test.py
tests/: database_test.py  formatter_test.py  ichunked_test.py  memory_cache_test.py  utils_test.py
