# -*- coding: utf-8 -*-
#
# This software may be modified and distributed under the terms
# of the MIT license.  See the LICENSE file for details.

[bdist_wheel]
universal=1

[flake8]
exclude = build,.git,docs
ignore = E127,E128,
max-line-length = 100

[isort]
line_length = 100
indent = '    '
multi_line_output = 3
length_sort = false
force_alphabetical_sort_within_sections = true
# https://github.com/timothycrosley/isort/issues/594
known_third_party = limits,pylogbeat,six
known_first_party = logstash_async
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
lines_after_imports = 2
from_first = true
include_trailing_comma = true

[metadata]
license_file = LICENSE
