# -*- coding: utf-8 -*-
#
# This software may be modified and distributed under the terms
# of the MIT license.  See the LICENSE file for details.

[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[flake8]
exclude = build,.git,docs
ignore = E127,E128,
max-line-length = 100

[isort]
line_length = 100
indent = '    '
multi_line_output = 3
length_sort = false
force_alphabetical_sort_within_sections = true
known_first_party = logstash_async
known_third_party = limits,pylogbeat,requests
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
lines_after_imports = 2
from_first = true
include_trailing_comma = true

# the following sections are for pylint
[MASTER]
ignore=.git
persistent=no
load-plugins=
    pylint.extensions.bad_builtin,
    pylint.extensions.check_elif,
    pylint.extensions.comparetozero,
    pylint.extensions.emptystring,
    pylint.extensions.mccabe,
    pylint.extensions.overlapping_exceptions,
    pylint.extensions.redefined_variable_type

[MESSAGES CONTROL]
disable=
  fixme,
  duplicate-code,
  empty-docstring,
  logging-format-interpolation,
  missing-docstring,
  no-else-raise,
  no-else-return,
  no-self-use,
  unnecessary-pass

[REPORTS]
output-format=parseable
files-output=no
reports=no

[FORMAT]
max-line-length=100

[VARIABLES]
dummy-variables-rgx=_|dummy

[DESIGN]
min-public-methods=0
max-attributes=15
max-args=7
max-parents=9

[EXCEPTIONS]
overgeneral-exceptions=
