# This software may be modified and distributed under the terms
# of the MIT license.  See the LICENSE file for details.

[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE

[flake8]
exclude = build,.git,docs
ignore = E127,E128,
max-line-length = 100

[isort]
line_length = 100
indent = '    '
multi_line_output = 3
length_sort = false
force_alphabetical_sort_within_sections = true
known_first_party = logstash_async
known_third_party = limits,pylogbeat,requests
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
lines_after_imports = 2
from_first = false
include_trailing_comma = true

# the following sections are for pylint
[pylint.main]
ignore=.git
persistent=no
load-plugins=
    pylint.extensions.bad_builtin,
    pylint.extensions.check_elif,
    pylint.extensions.mccabe,
    pylint.extensions.overlapping_exceptions,
    pylint.extensions.redefined_variable_type

[pylint]
disable=
  fixme,
  duplicate-code,
  empty-docstring,
  logging-format-interpolation,
  missing-docstring,
  no-else-raise,
  no-else-return,
  unnecessary-pass,
  use-dict-literal

[pylint.reports]
output-format=parseable
reports=no

[pylint.format]
max-line-length=100

[pylint.variables]
dummy-variables-rgx=_|dummy

[pylint.basic]
good-names=i,QUEUED_EVENTS_BATCH_SIZE

[pylint.design]
min-public-methods=0
max-attributes=15
max-args=8
max-positional-arguments=13
max-parents=9

[pylint.exceptions]
overgeneral-exceptions=
